# rusty-hook

./: .editorconfig  .gitattributes  .gitignore  .rusty-hook.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  azure-pipelines.yml  build.rs
.azure-pipelines/pull-requests/: clippy.yml  rustfmt.yml
.dependabot/: config.yml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 01_BUG.md  02_FEATURE_REQUEST.md  03_QUESTION.md
.github/workflows/: linux.yml
scripts/: dev_setup.ps1  dev_setup.sh
src/: closures.rs  config.rs  config_test.rs  git.rs  git_test.rs  hook_script.sh  hooks.rs  hooks_test.rs  main.rs  rusty_hook.rs  rusty_hook_test.rs
src/hook_files/: cli.sh  hook_script.sh  semver.sh
tests/hook_files/: cli.sh  run_tests.sh  semver.sh  shunit2.sh
