[package]
name = "rusty-hook"
version = "0.12.0"
authors = ["Swellaby <opensource@swellaby.com>"]
description = "git hook utility"
license = "MIT"
repository = "https://github.com/swellaby/rusty-hook"
readme = "README.md"
edition = "2018"
keywords = [ "hooks", "githook", "git", "hook", "commit" ]
categories = [ "development-tools" ]
exclude = [
  ".coverage/**",
  ".testresults/**",
  ".azure-pipelines/**",
  ".dependabot/**",
  ".github/**",
  ".vscode/**",
  "scripts/**",
  ".editorconfig",
  ".gitattributes",
  ".rustfmt.toml",
  ".rusty-hook.toml",
  "azure-pipelines.yml",
  "kcov*/**",
  "**/*.gcda",
  "**/*.gcno",
  "tests/**",
  "cobertura.xml",
  "tarpaulin-report.html",
]

[dependencies]
ci_info = "0.14.3"
clap = "3.0.0-beta.4"
toml = "0.5.8"
nias = "0.7.0"

[build-dependencies]
ci_info = "0.14.3"
toml = "0.5.8"
nias = "0.7.0"

[badges]
azure-devops = { project = "swellaby/opensource", pipeline = "rusty-hook.linux-pr", build="49" }
codecov = { repository = "swellaby/rusty-hook", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }
